syntax = "proto3";

option java_package = "org.pipelineframework.search.grpc";

import "parse-document-svc.proto";


message TokenBatch {
  string docId = 5;
  string tokens = 6;
  string tokenizedAt = 7;
}

service ProcessTokenizeContentService {
  rpc remoteProcess(ParsedDocument) returns (TokenBatch);
}

service ObservePersistenceTokenBatchSideEffectService {
  rpc remoteProcess(TokenBatch) returns (TokenBatch);
}

service ObserveCacheInvalidateTokenBatchSideEffectService {
  rpc remoteProcess(TokenBatch) returns (TokenBatch);
}

service ObserveCacheInvalidateAllTokenBatchSideEffectService {
  rpc remoteProcess(TokenBatch) returns (TokenBatch);
}
